cmake_minimum_required(VERSION 3.12)
if (EXISTS /opt/vcpkg)
    set(CMAKE_TOOLCHAIN_FILE "/opt/vcpkg/scripts/buildsystems/vcpkg.cmake")
endif ()
project(ppf LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 11)
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIRS})
add_executable(ppf PPF_matching.cpp)
target_link_libraries(ppf)
